# py-safelogger

./: .coverage  .gitignore  README.md  project.md  pyproject.toml  setup.cfg  tasks.md
.github/workflows/: python-publish.yml
src/: __init__.py  lib_logging.py  safelogger.py
src/handlers/: cloud.py
src/utils/: config.py
tests/: test_cloud_handler.py  test_config.py  test_lib_logging.py  test_safelogger.py
