[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safelogger"
version = "0.1.0"
description = "Biblioteca de logging estruturado para Python"
authors = [
    {name = "Bruno Schuster Fraga", email = "brunofraga_@outlook.com.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-json-logger",
    "structlog"
]

[tool.setuptools]
packages = ["src"] 